// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli tests add --bundle can force 1`] = `
"Reading existing importmap
Fetching package info for lit-element@2.1.0
Bundling lit-element@2.1.0
Writing bundle for lit-element@2.1.0
Writing importmap
Done! [XX s]"
`;

exports[`cli tests add --bundle displays console messages 1`] = `
"Cleaning output directory
Reading existing importmap
Fetching package information for lit-element@2.1.0
Fetching dependecy tree for lit-element@2.1.0
Extracting tarball for lit-element@2.1.0
Extracting tarball for lit-html@1.1.0
Fetching package info for lit-element@2.1.0
Bundling lit-element@2.1.0
Writing bundle for lit-element@2.1.0
Writing importmap
Done! [XX s]"
`;

exports[`cli tests add --bundle importmap 1`] = `
"{
  \\"imports\\": {
    \\"lit-element@2.1.0\\": \\"/-/lit-element@2.1.0.bundle.js\\",
    \\"lit-element@2\\": \\"/-/lit-element@2.1.0.bundle.js\\"
  },
  \\"scopes\\": {}
}"
`;

exports[`cli tests add can clean 1`] = `
"Cleaning output directory
Reading existing importmap
Fetching package information for lit-html@1.1.0
Fetching dependecy tree for lit-html@1.1.0
Extracting tarball for lit-html@1.1.0
Writing importmap
Done! [XX s]"
`;

exports[`cli tests add can force 1`] = `
"Reading existing importmap
Fetching package information for lit-element@2.1.0
Fetching dependecy tree for lit-element@2.1.0
Extracting tarball for lit-element@2.1.0
Extracting tarball for lit-html@1.1.0
Writing importmap
Done! [XX s]"
`;

exports[`cli tests add can force skip on missing packages 1`] = `
"Reading existing importmap
Fetching package information for @swimlane/pkgdrop@0.0.0
Package @swimlane/pkgdrop@0.0.0 not found, skipping
No changes to importmap
Done! [XX s]"
`;

exports[`cli tests add displays console messages 1`] = `
"Cleaning output directory
Reading existing importmap
Fetching package information for lit-element@2.1.0
Fetching dependecy tree for lit-element@2.1.0
Extracting tarball for lit-element@2.1.0
Extracting tarball for lit-html@1.1.0
Writing importmap
Done! [XX s]"
`;

exports[`cli tests add fail on missing package 1`] = `
"Reading existing importmap
Fetching package information for @swimlane/pkgdrop@0.0.0
Error: Package @swimlane/pkgdrop@0.0.0 not found
	package may be private
	use --force to skip missing packages [XX s]"
`;

exports[`cli tests add importmap 1`] = `
"{
  \\"imports\\": {
    \\"lit-element@2.1.0\\": \\"/-/lit-element@2.1.0/lit-element.js\\",
    \\"lit-element@2.1.0/\\": \\"/-/lit-element@2.1.0/\\",
    \\"lit-element@2\\": \\"/-/lit-element@2.1.0/lit-element.js\\",
    \\"lit-element@2/\\": \\"/-/lit-element@2.1.0/\\"
  },
  \\"scopes\\": {
    \\"lit-element@2.1.0\\": {
      \\"lit-html\\": \\"/-/lit-html@1.1.0/lit-html.js\\",
      \\"lit-html/\\": \\"/-/lit-html@1.1.0/\\"
    },
    \\"lit-html@1.1.0\\": {}
  }
}"
`;

exports[`cli tests init displays console messages 1`] = `
"Writing pkgdrop.config.js
Writing importmap
Done! [XX s]"
`;

exports[`cli tests init file content 1`] = `
"{
  \\"imports\\": {},
  \\"scopes\\": {}
}"
`;

exports[`cli tests init file content 2`] = `
"module.exports = {
  \\"package_path\\": \\"./-/\\",
  \\"package_root\\": \\"/-/\\"
}"
`;

exports[`cli tests pack displays console messages 1`] = `
"Writing pkgdrop-pack-test.tgz
Done! [XX s]"
`;

exports[`cli tests pack importmap 1`] = `
"{
  \\"imports\\": {
    \\"lit-element@2.0.0\\": \\"/-/lit-element@2.0.0/lit-element.js\\",
    \\"lit-element@2.0.0/\\": \\"/-/lit-element@2.0.0/\\",
    \\"lit-element@2\\": \\"/-/lit-element@2.0.0/lit-element.js\\",
    \\"lit-element@2/\\": \\"/-/lit-element@2.0.0/\\"
  },
  \\"scopes\\": {
    \\"lit-element@2.0.0\\": {
      \\"lit-html\\": \\"/-/lit-html@1.1.0/lit-html.js\\",
      \\"lit-html/\\": \\"/-/lit-html@1.1.0/\\"
    },
    \\"lit-html@1.1.0\\": {}
  }
}"
`;

exports[`cli tests pack merge displays console messages 1`] = `
"Extracting pkgdrop-pack-test.tgz
Writing importmap
Done! [XX s]"
`;

exports[`cli tests pack merge importmap 1`] = `
"{
  \\"imports\\": {
    \\"lit-element@2.1.0\\": \\"/-/lit-element@2.1.0/lit-element.js\\",
    \\"lit-element@2.1.0/\\": \\"/-/lit-element@2.1.0/\\",
    \\"lit-element@2\\": \\"/-/lit-element@2.1.0/lit-element.js\\",
    \\"lit-element@2/\\": \\"/-/lit-element@2.1.0/\\",
    \\"lit-element@2.0.0\\": \\"/-/lit-element@2.0.0/lit-element.js\\",
    \\"lit-element@2.0.0/\\": \\"/-/lit-element@2.0.0/\\"
  },
  \\"scopes\\": {
    \\"lit-element@2.1.0\\": {
      \\"lit-html\\": \\"/-/lit-html@1.1.0/lit-html.js\\",
      \\"lit-html/\\": \\"/-/lit-html@1.1.0/\\"
    },
    \\"lit-html@1.1.0\\": {},
    \\"lit-element@2.0.0\\": {
      \\"lit-html\\": \\"/-/lit-html@1.1.0/lit-html.js\\",
      \\"lit-html/\\": \\"/-/lit-html@1.1.0/\\"
    }
  }
}"
`;
